src/components/Home.css
@font-face {
  font-family: "MyFont";
  src: url("../fonts/RobotoSlab-VariableFont_wght.ttf");
  font-weight: normal;
  font-style: normal;
}

.home {
  overflow: hidden;
}

.home-container {
  display: flex;
  min-height: 92vh;
  justify-content: center;
  align-items: center;
  gap: 50px;
}

.home-img {
  width: 500px;
  height: auto;
}

.home-container > div,
.home-img {
  margin-bottom: 100px;
  font-family: "MyFont", sans-serif;
  font-size: 25px;
}

.home-desc > span {
  color: rgb(0, 162, 255);
  text-decoration: underline;
}
.get-to-know-btn {
  font-size: 25px;
  color: white;
  background-color: rgb(0, 162, 255);
  border-radius: 30px;
  border: 2px solid rgb(0, 162, 255);
  padding: 15px;
  cursor: pointer;
  font-weight: bold;
  display: flex;
  align-items: center;
  text-decoration: none;
}
.get-to-know-btn:hover {
  color: rgb(0, 162, 255);
  background-color: white;
}
.about-link {
  text-decoration: none;
}

@media (max-width: 1000px) {
  .home-img {
    width: 450px;
    height: auto;
  }
  .home-container > div,
  .home-img {
    font-size: 22px;
  }
}
@media (max-width: 850px) {
  .home-container {
    display: flex;
    flex-direction: column;
    gap: 0;
    text-align: center;
    justify-content: flex-start;
  }
  .home-img {
    margin: 0;
    padding: 0;
  }
  .home-container > div {
    width: 100%;
    margin-top: 0;
    margin-bottom: 0;

    order: 1;
  }
}

@media (max-width: 400px) {
  .home-img {
    width: 350px;
    height: auto;
  }
  .home-container > div {
    font-size: 20px;
    order: 1;
  }
}

/* animation */

.home-heading {
  animation: 1.5s fade-in ease-in;
}

.home-desc {
  animation: 1.5s fade-in ease-in;
}
.get-to-know-btn {
  animation: 2.5s fade-in ease-in;
}

